Embed Java LSP and harden launcher startup